# twitch-extension/ebs/server/endpoints.go
@@ -83,3 +83,12 @@ func (s *server) GoToPosition(c *gin.Context) {
 
 	c.Status(http.StatusAccepted)
 }
+
+func (s *server) ClaimControl(c *gin.Context) {
+	err := s.app.ClaimControl(c)
+	if err != nil {
+		c.AbortWithError(http.StatusForbidden, err)
+		return
+	}
+	c.Status(http.StatusAccepted)
+}
